--- a/debian/sway/config
+++ b/debian/sway/config
@@ -8,16 +8,16 @@
 #
 # Logo key. Use Mod1 for Alt.
 set {
-  $opacity 0.8
+  $opacity 1
   $mop BF
 
-  $col_focs_brdr #434A54  
+  $col_focs_brdr #2F343F
   $col_focs_back #24282E 
   $col_focs_text #FFFFFF
   $col_focs_indt #333333  
   $col_focs_cbdr #2F343F 
 
-  $col_fcin_brdr #3A3F4B
+  $col_fcin_brdr #2F343F
   $col_fcin_back #1B1D23
   $col_fcin_text #FFFFFF
   $col_fcin_indt #2F343F
@@ -44,7 +44,7 @@ set $right l
 # our preferred terminal emulator
 set $term xfce4-terminal 
 # Your preferred application launcher
-set $menu rofi -show drun,power,run  -theme  
+set $menu rofi -show combi -modes combi -combi-modes "window,drun,run" -theme
 exec_always autotiling
 ### Output configuration
 #
@@ -252,20 +252,35 @@ bindsym $mod+r mode "resize"
     # Special key to take a screenshot with grim
     bindsym Print exec grim
 
+seat seat0 xcursor_theme Adwaita 24 
 #
 # Status Bar:
 #
 # Read `man 5 sway-bar` for more information about this section.
-client.focused          $col_focs_brdr  $col_focs_back$mop $col_focs_text $col_focs_indt $col_focs_cbdr
-client.focused_inactive $col_fcin_brdr  $col_fcin_back     $col_fcin_text $col_fcin_indt $col_fcin_cbdr
-client.unfocused        $col_unfc_brdr  $col_unfc_back     $col_unfc_text $col_unfc_indt $col_unfc_cbdr
-client.urgent           $col_urgt_brdr  $col_urgt_back     $col_urgt_text $col_urgt_indt $col_urgt_cbdr
+client.focused           $col_focs_brdr  $col_focs_back$mop $col_focs_text $col_focs_indt $col_focs_cbdr
+client.focused_inactive  $col_focs_brdr  $col_focs_back$mop $col_focs_text $col_focs_indt $col_focs_cbdr
+client.unfocused         $col_focs_brdr  $col_focs_back$mop $col_focs_text $col_focs_indt $col_focs_cbdr
+client.urgent            $col_focs_brdr  $col_focs_back$mop $col_focs_text $col_focs_indt $col_focs_cbdr
 
 bar {
     position top
 
     swaybar_command waybar
 }
+set $exit "exit: [s]leep, [p]oweroff, [r]eboot, [l]ogout"
+mode $exit {
+    bindsym --to-code {
+        s exec systemctl suspend, mode "default"
+        p exec systemctl poweroff
+        r exec systemctl reboot
+        l exec swaymsg exit
+      #  w exec reboot-to-windows-somehow-lol.sh
+    
+        Return mode "default"
+        Escape mode "default"
+        $mod+x mode "default"
+    }
+}
 
-default_border none
+bindsym --to-code $mod+x mode $exit
 include /etc/sway/config.d/*
