update to black & red config

--- a/.sway-config/fuzzel/fuzzel.ini
+++ b/.sway-config/fuzzel/fuzzel.ini
@@ -1,3 +1,16 @@
+# output=<not set>
+# font=monospace
+# dpi-aware=auto
+# prompt=> 
+# icon-theme=hicolor
+# icons-enabled=yes
+# fields=filename,name,generic
+# password-character=*
+# fuzzy=yes
+# show-actions=no
+# terminal=$TERMINAL -e  # Note: you cannot actually use environment variables here
+# launch-prefix=<not set>
+
 # lines=15
 # width=30
 # horizontal-pad=40
@@ -13,17 +26,17 @@
 # exit-on-keyboard-focus-loss = yes
 
 [colors]
-background=282a36dd
+background=000000dd
 text=f8f8f2ff
-match=8be9fdff
-selection-match=8be9fdff
+match=ff0000ff
+selection-match=ff0000ff
 selection=44475add
 selection-text=f8f8f2ff
-border=a1bdceff
+border=ffffffff
 
 [border]
- width=4
- radius=10
+# width=1
+# radius=10
 
 [dmenu]
 # mode=text  # text|index
@@ -73,4 +86,4 @@ border=a1bdceff
 # custom-16=Mod1+dead_circumflex
 # custom-17=Mod1+ampersand
 # custom-18=Mod1+asterix
-# custom-19=Mod1+parentleft
+# custom-19=Mod1+parentleft custom-19=Mod1+parentleftast = Control+End custom-19=Mod1+parentleft
