--- a/.sway-config/sway/config
+++ b/.sway-config/sway/config
@@ -1,25 +1,54 @@
 exec dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_SESSION_TYPE=wayland XDG_CURRENT_DESKTOP=sway XDG_CURRENT_SESSION=sway XDG_SESSION_DESKTOP=sway ELECTRON_OZONE_PLATFORM_HINT=auto QT_QPA_PLATFORM=wayland GTK_CSD=0
-
 include /etc/sway/config-vars.d/*
 include $HOME/.config/sway/config.d/*
 
+### Variables
 set $mod Mod4
 set $scale 1
-set $border_size 2 
-
+set $border_size 1
+set $border_size_floating 1
+## Theme
+seat * xcursor_theme Adwaita 24
 default_border pixel $border_size
+default_floating_border pixel $border_size_floating
+gaps inner 0
+gaps outer 0
 set {
-  $accent  #A1BDCE
-  $red #cc241d
-  $darkgray #ffffff1a 
+  $opacity 1
+  $mop BF
+
+  $col_focs_brdr #101010 
+  $col_focs_back #101010
+  $col_focs_indt #101010  
+  $col_focs_text #101010
+  $col_focs_cbdr #101010
+
+  $col_fcin_brdr #2F343F
+  $col_fcin_back #1B1D23
+  $col_fcin_text #FFFFFF
+  $col_fcin_indt #2F343F
+  $col_fcin_cbdr #2F343F
+
+  $col_unfc_brdr #2F343F
+  $col_unfc_back #121415
+  $col_unfc_text #AAAAAA
+  $col_unfc_indt #2F343F
+  $col_unfc_cbdr #2F343F
+
+  $col_urgt_brdr #5C5555
+  $col_urgt_back #3E3F43
+  $col_urgt_text #FFFFFF
+  $col_urgt_indt #2F343F
+  $col_urgt_cbdr #2F343F
 }
 
-client.focused          $accent $accent $darkgray $accent $accent
-client.focused_inactive $darkgray $darkgray $accent $darkgray $darkgray
-client.unfocused        $darkgray $darkgray $accent $darkgray $darkgray
-client.urgent           $red $red $accent $red $red  
-output eDP-1 scale $scale bg $HOME/.config/sway/wallpaper.jpeg fill
+client.focused           $col_focs_brdr  $col_focs_back$mop $col_focs_text $col_focs_indt $col_focs_cbdr
+client.focused_inactive  $col_focs_brdr  $col_focs_back$mop $col_focs_text $col_focs_indt $col_focs_cbdr
+client.unfocused         $col_focs_brdr  $col_focs_back$mop $col_focs_text $col_focs_indt $col_focs_cbdr
+client.urgent            $col_focs_brdr  $col_focs_back$mop $col_focs_text $col_focs_indt $col_focs_cbdr
 
+### Background image
+output eDP-1 scale $scale 
 ### Lock screen
 exec swayidle -w \
 	timeout 600 '~/.config/swaylock/lock.sh' \
@@ -30,6 +59,7 @@ exec swayidle -w \
 
 
 ### Keyboard layout
+
 input type:touchpad {
   accel_profile flat
   click_method clickfinger
@@ -41,8 +71,7 @@ input type:touchpad {
   scroll_method two_finger
   tap disabled
 }
-# Cursor fix
-seat seat0 xcursor_theme Adwaita 24
+### Key bindings
 
 # Volume control
 bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5%
@@ -56,19 +85,32 @@ bindsym XF86AudioMicMute exec pactl set-source-mute @DEFAULT_SOURCE@ toggle
 bindsym XF86MonBrightnessUp exec brightnessctl set 5%+
 bindsym XF86MonBrightnessDown exec brightnessctl set 5%-
 
+# Music/Audio control
+bindsym XF86AudioPlay exec playerctl play-pause
+bindsym XF86AudioNext exec playerctl next
+bindsym XF86AudioPrev exec playerctl previous
+
 # Screenshots
 bindsym Print exec grim $HOME/latest-screenshot.png | notify-send -u low -a "Screenshot taken" -c "grim" "Screenshot taken" "Saved at ~/latest-screenshot.png"
 bindsym $mod+Print exec slurp | grim -g - $HOME/latest-screenshot.png | notify-send -u low -a "Screenshot taken" -c "grim" "Screenshot taken" "Saved at ~/latest-screenshot.png"
 
 # Start a terminal
-bindsym $mod+Return exec xfce4-terminal 
+bindsym $mod+Return exec xfce4-terminal
 
 # Kill focused window
 bindsym $mod+q kill
 
-# Start launcher 
-bindsym $mod+d exec fuzzel -I
+# Shortcut to file explorer
 
+# Start your launcher
+bindsym $mod+d exec fuzzel 
+
+
+# Drag floating windows by holding down $mod and left mouse button.
+# Resize them with right mouse button + $mod.
+# Despite the name, also works for non-floating windows.
+# Change normal to inverse to use left mouse button for resizing and right
+# mouse button for dragging.
 floating_modifier $mod normal
 
 # Reload the configuration file
@@ -82,6 +124,11 @@ bindsym $mod+Left focus left
 bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
+bindsym $mod+h focus left
+bindsym $mod+j focus down
+bindsym $mod+k focus up
+bindsym $mod+l focus right
+
 
 # Move the focused window with the same, but add Shift
 bindsym $mod+Shift+Left move left
@@ -113,6 +160,10 @@ bindsym $mod+Shift+8 move container to workspace number 8
 bindsym $mod+Shift+9 move container to workspace number 9
 bindsym $mod+Shift+0 move container to workspace number 10
 
+# Note: workspaces can have any name you want, not just numbers.
+# We just use 1-10 as the default.
+
+# Make the current focused window fullscreen
 bindsym $mod+f fullscreen
 
 # Toggle the current focused window between tiling and floating mode
@@ -123,6 +174,9 @@ bindsym $mod+space focus mode_toggle
 
 # Move focus to the parent container
 bindsym $mod+a focus parent
+
+# Note: Sway's scratchpad has been "disabled" as hardly anyone ever use it.
+# Check /etc/sway/config to see how to retrieve this functionality if needed.
 
 # Allow switching between workspaces with left and right swipes
 bindgesture swipe:right workspace next 
@@ -141,21 +195,20 @@ mode "resize" {
     bindsym Up resize shrink height 10px
     bindsym Right resize grow width 10px
 
-# Resize mode
-bindsym Return exec swaymsg mode "default" | notify-send -u low -a "Exit resize mode" -c "sway" "Left resize mode"
-bindsym Escape exec swaymsg mode "default" | notify-send -u low -a "Exit resize mode" -c "sway" "Left resize mode"
-bindsym $mod+r exec swaymsg mode "resize" | notify-send -u low -a "Enter resize mode" -c "sway" "Entered resize mode" "Use arrows to edit windows"
-# Status bar
+    # Return to default mode
+    bindsym Return exec swaymsg mode "default" | notify-send -u low -i "/usr/share/icons/Papirus-Dark/64x64/apps/gnome-windows.svg" -a "Exit resize mode" -c "sway" "Left resize mode"
+    bindsym Escape exec swaymsg mode "default" | notify-send -u low -i "/usr/share/icons/Papirus-Dark/64x64/apps/gnome-windows.svg" -a "Exit resize mode" -c "sway" "Left resize mode"
+}
+bindsym $mod+r exec swaymsg mode "resize" | notify-send -u low -i "/usr/share/icons/Papirus-Dark/64x64/apps/gnome-windows.svg" -a "Enter resize mode" -c "sway" "Entered resize mode" "Use arrows to edit windows"
 
+# Status bar
 bar {
     position top
 
     swaybar_command waybar
 }
 
-exec autotiling
-# Logout screen
-set $exit "  exit: [s]leep, [p]oweroff, [r]eboot, [l]ogout"
+set $exit "exit: [s]leep, [p]oweroff, [r]eboot, [l]ogout"
 mode $exit {
     bindsym --to-code {
         s exec systemctl suspend, mode "default"
@@ -175,6 +228,4 @@ bindsym --to-code $mod+x mode $exit
 set $laptop eDP-1
 bindswitch lid:on output $laptop disable
 bindswitch lid:off output $laptop enable
-gaps top 2
-gaps inner 2 
-gaps outer 2
+
