fix workspaces for multiple monitors

--- a/.hypr-config/hypr/UserConfigs/Monitors.conf
+++ b/.hypr-config/hypr/UserConfigs/Monitors.conf
@@ -6,8 +6,11 @@
 # Configure your Display resolution, offset, scale and Monitors here, use `hyprctl monitors` to get the info.
 
 # Monitors
-monitor=,preferred,auto,1
 
+monitor=DP-1,1920x1080@60.0,2158x1518,1.0
+monitor=DP-1,transform,3
+monitor=DP-2,1920x1080@60.0,4838x1938,1.0
+monitor=HDMI-A-1,2560x1600@130.0,3238x1938,1.6
 # NOTE: for laptop, kindly check notes in Laptops.conf regarding display
 # Created this inorder for the monitor display to not wake up if not intended.
 # See here: https://github.com/hyprwm/Hyprland/issues/4090
