--- a/.hypr-config/hypr/UserConfigs/WorkspaceRules.conf
+++ b/.hypr-config/hypr/UserConfigs/WorkspaceRules.conf
@@ -15,6 +15,27 @@
 # workspace = 7, monitor:DP-2
 # workspace = 8, monitor:DP-2
 
+workspace = 1, monitor:HDMI-A-1
+workspace = 2, monitor:HDMI-A-1
+workspace = 3, monitor:HDMI-A-1
+workspace = 4, monitor:HDMI-A-1
+workspace = 5, monitor:HDMI-A-1
+workspace = 6, monitor:HDMI-A-1
+workspace = 7, monitor:HDMI-A-1
+workspace = 8, monitor:HDMI-A-1
+workspace = 9, monitor:HDMI-A-1
+workspace = 10, monitor:HDMI-A-1
+workspace = 11, monitor:DP-1
+workspace = 12, monitor:DP-1
+workspace = 13, monitor:DP-1
+workspace = 14, monitor:DP-1
+workspace = 15, monitor:DP-1
+workspace = 16, monitor:DP-2
+workspace = 17, monitor:DP-2
+workspace = 18, monitor:DP-2
+workspace = 19, monitor:DP-2
+workspace = 20, monitor:DP-2
+
 
 # example rules (from wiki)
 # workspace = 3, rounding:false, decorate:false
@@ -23,4 +44,4 @@
 # workspace = name:Hello, monitor:DP-1, default:true
 # workspace = name:gaming, monitor:desc:Chimei Innolux Corporation 0x150C, default:true
 # workspace = 5, on-created-empty:[float] firefox
-# workspace = special:scratchpad, on-created-empty:foot
+# workspace = sp<LeftMouse>ecial:scratchpad, on-created-empty:foot
