--- a/.hypr-config/hypr/wallust/wallust-hyprland.conf
+++ b/.hypr-config/hypr/wallust/wallust-hyprland.conf
@@ -1,21 +1,21 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
 # /* wallust template - colors-hyprland */ 
 
-$background = rgb(050017)
-$foreground = rgb(EFE5F1)
-$color0 = rgb(050017)
-$color1 = rgb(0B1967)
-$color2 = rgb(262E72)
-$color3 = rgb(5D5788)
-$color4 = rgb(5B5CAA)
-$color5 = rgb(94809E)
-$color6 = rgb(9E87A2)
-$color7 = rgb(E0D1E3)
-$color8 = rgb(9D929F)
-$color9 = rgb(0E2289)
-$color10 = rgb(333D98)
-$color11 = rgb(7C74B5)
-$color12 = rgb(797BE3)
-$color13 = rgb(C6ABD3)
-$color14 = rgb(D2B4D8)
-$color15 = rgb(E0D1E3)
+$background = rgb(191B21)
+$foreground = rgb(F2E6F0)
+$color0 = rgb(404248)
+$color1 = rgb(0F1C31)
+$color2 = rgb(1E4267)
+$color3 = rgb(1E4267)
+$color4 = rgb(4A485D)
+$color5 = rgb(7B6D82)
+$color6 = rgb(A38B9F)
+$color7 = rgb(E3D3E1)
+$color8 = rgb(9F949D)
+$color9 = rgb(142541)
+$color10 = rgb(285889)
+$color11 = rgb(285889)
+$color12 = rgb(63607C)
+$color13 = rgb(A491AD)
+$color14 = rgb(D9B9D4)
+$color15 = rgb(E3D3E1)
